--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,18 @@
+.column{
+display: inline;
+width: 48%;
+}
+.small{
+
+}
+.med{
+  width: 50%;
+  height: 50%;
+}
+.large{
+  width: 100%;
+  height: 100%;
+}
 body, html {
   width: 100%;
   height: 100%;
